tests/parsing/smtlib/mcil/errors/219_define-system_missing_output_list.expected
File "tests/parsing/smtlib/mcil/errors/219_define-system_missing_output_list.mcil", line 1, character 27-28:
1 | (define-system sys :output )
                               ^
Error while parsing a system output definition, read a closing parenthesis,
      but expected a list of sorted variables.
